# gl-smart-search-sdk-cookbook

./: .gitignore  README.md
examples/connector/: .env.example  README.md  connector_connect.py  connector_connect_with_gl_connectors_token.py  connector_disconnect.py  connector_disconnect_with_gl_connectors_token.py  connector_search.py  connector_search_stream.py  connector_search_with_gl_connectors_token.py  connector_search_with_gl_connectors_token_stream.py  get_token.py  pyproject.toml
examples/web/: .env.example  README.md  get_token.py  pyproject.toml  web_page_fetch.py  web_page_fetch_stream.py  web_page_keypoints.py  web_page_keypoints_stream.py  web_page_snippets.py  web_page_snippets_stream.py  web_search_basic.py  web_search_keypoints.py  web_search_keypoints_stream.py  web_search_map.py  web_search_map_stream.py  web_search_stream.py  web_search_urls.py  web_search_urls_stream.py
